--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = medial
-version = 0.4+1.gf0d8e83
+version = 0.4.1
 author = dlek
 author_email = dlek@p0nk.net
 description = Minimal database access library
