--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ author_email = dlek@p0nk.net
 description = Minimal database access library
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://gitlab.com/dlek/mdal
+url = https://gitlab.com/dlek/medial
 project_urls =
-  Bug Tracker = https://gitlab.com/dlek/mdal/-/issues
+  Bug Tracker = https://gitlab.com/dlek/medial/-/issues
 classifiers =
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
