Fix packaging issues
- Rename src/ back to medial/ as that becomes the module name (facepalm)
- Require psycopg2-binary package

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,8 @@ classifiers =
 package_dir =
 packages = find:
 python_requires = >=3.6
+install_requires =
+  psycopg2-binary
 
 [options.packages.find]
 where = medial
