--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = medial
 version = 0.4.6
 author = dlek
 author_email = dlek@p0nk.net
-description = Minimal database access library
+description = Minimal database assistance library
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://gitlab.com/dlek/medial
